--- a/application/views/templates/home.html
+++ b/application/views/templates/home.html
@@ -11,8 +11,8 @@ img.emoji {
 	display: inline !important;
 	border: none !important;
 	box-shadow: none !important;
-	height: 1em !important;
-	width: 1em !important;
+	height: 2px !important;
+	width: 2px !important;
 	margin: 0 .07em !important;
 	vertical-align: -0.1em !important;
 	background: none !important;
@@ -104,7 +104,7 @@ ul.social-buttons li a:active {
     background:#fed136;
 }
 body {
-    webkit-tap-highlight-color:#fed136;
+    -webkit-tap-highlight-color:#fed136;
 }
 ol.commentlist li.comment .comment-author .avatar {
     border: 3px solid #fed136; 
@@ -154,14 +154,14 @@ footer{background:#20222b;}.navbar-default{background-color:#fff;}
 .navbar-default .navbar-toggle:focus{background:#fec503;border-color:#fec503;}.NovelLite_slider .container h1 a{color:#fff;}
 .NovelLite_slider .container p{color:#fff;}.NovelLite_slider .slider_overlay{background-color:rgba(0, 0, 0, 0.1);}#section1 h2.section-heading{color:#333;}
 #section1 h3.section-subheading{color:#777;} #section1 h4.service-heading{color:#777;}
-#section1 p.text-muted{color:#777;}#section1{background:#fff;}#section2 .testimonial-inner .testimonial-header{color:#fff;}.bx-wrapper .bx-caption span{background:#fff; color:#000}#section2{background-image:url({{$base_url}}assets/images/testimonial-back.jpg);}#section2:before{background:rgba(0, 0,0, 0);}#section8 h2.section-heading{color:#333;}
+#section1 p.text-muted{color:#777;}#section1{background:#fff;}#section2 .testimonial-inner .testimonial-header{color:#fff;}.bx-wrapper .bx-caption span{background:#fff; color:#000}#section2{background-image:url({{$base_url}}assets/images/Center-Page.jpeg);}#section2:before{background:rgba(0, 0,0, 0);}#section8 h2.section-heading{color:#333;}
 #section8 h3.section-subheading{color:#777;}#section8{background:#F7F7F7;}#section3 h2.section-heading{color:#333;}
 #section3 h3.section-subheading{color:#777;}#section3{background:#fff;}#section4 h2.section-heading{color:#333;}
 #section4 h3.section-subheading{color:#777;}
 #section4 .team-member h4{color:#222;}
 #section4 .team-member p.text-muted{color:#777;}
 #section4 .team-member p{color:#333;}#section4{background:#f7f7f7;}#section5 .section-heading{color:#fff;}
-#section5 h3.section-subheading.contact{color:#fff;}#section5{background-image:url({{$base_url}}assets/images/contact-back.jpg);}#section5:before{background:rgba(0,0,0,0);}#price-package .post-title h1{color:#fff;}
+#section5 h3.section-subheading.contact{color:#fff;}#section5{background-image:url({{$base_url}}assets/images/Contact-Us.jpeg);}#section5:before{background:rgba(0,0,0,0);}#price-package .post-title h1{color:#fff;}
 #price-package .post-title p{color:#fff;}#price-package{background-image:url({{$base_url}}assets/images/pricing.jpg);}#price-package:before{background:rgba(0, 0,0, 0);}</style><link rel="icon" href="{{$base_url}}assets/images/cropped-arrows-box-business-533189-e1533635567575-1-32x32.jpg" sizes="32x32" />
 <link rel="icon" href="{{$base_url}}assets/images/cropped-arrows-box-business-533189-e1533635567575-1-192x192.jpg" sizes="192x192" />
 <link rel="apple-touch-icon-precomposed" href="{{$base_url}}assets/images/cropped-arrows-box-business-533189-e1533635567575-1-180x180.jpg" />
@@ -283,8 +283,7 @@ footer{background:#20222b;}.navbar-default{background-color:#fff;}
             <div class="col-lg-12">
                 <div class="home_blog_content gallery wow fadeInLeft" data-wow-duration="2s">
                                         <!--Start post-->
-                    <div class="post animated" style="-webkit-animation-delay: 0.2s;
-                        -webkit-animation-delay: 0.2s; -moz-animation-delay: 0.2s; -o-animation-delay: 0.2s; -ms-animation-delay: 0.2s;">
+                    <div class="post animated" style="-webkit-animation-delay: 0.2s; -webkit-animation-delay: 0.2s; -moz-animation-delay: 0.2s; -o-animation-delay: 0.2s; -ms-animation-delay: 0.2s;">
                         <div class="post_inner">
                             <div class="post_thumbnil">
                                                             </div>
@@ -303,8 +302,7 @@ footer{background:#20222b;}.navbar-default{background-color:#fff;}
                         </div>
                     </div>
                                         <!--Start post-->
-                    <div class="post animated" style="-webkit-animation-delay: 0.4s;
-                        -webkit-animation-delay: 0.4s; -moz-animation-delay: 0.4s; -o-animation-delay: 0.4s; -ms-animation-delay: 0.4s;">
+                    <div class="post animated" style="-webkit-animation-delay: 0.4s; -webkit-animation-delay: 0.4s; -moz-animation-delay: 0.4s; -o-animation-delay: 0.4s; -ms-animation-delay: 0.4s;">
                         <div class="post_inner">
                             <div class="post_thumbnil">
                                                             </div>
@@ -371,7 +369,7 @@ footer{background:#20222b;}.navbar-default{background-color:#fff;}
         <div class="row">
             <div class="col-lg-12 text-center">
                 <h2 class="section-heading">Contact Me</h2>
-                <h3 class="section-subheading text-muted contact">Lorem ipsum dolor sit amet consectetur.</h3>
+                <!-- <h3 class="section-subheading text-muted contact"></h3> -->
             </div>
         </div>
         <div class="row">
