--- a/application/views/templates/header.html
+++ b/application/views/templates/header.html
@@ -18,19 +18,19 @@ img.emoji {
 	padding: 0 !important;
 }
 </style>
-<link rel='stylesheet' id='contact-form-7-css'  href='{{$base_url}}assets/css/styles.css?ver=5.1.3' type='text/css' media='all' />
-<link rel='stylesheet' id='contact-form-7-css'  href='{{$base_url}}assets/css/font-awesome/css/all.css' type='text/css' media='all' />
+<link rel='stylesheet' id='contact-form-7-css'  href='{{$base_url}}/assets/css/styles.css?ver=5.1.3' type='text/css' media='all' />
+<link rel='stylesheet' id='contact-form-7-css'  href='{{$base_url}}/assets/css/font-awesome/css/all.css' type='text/css' media='all' />
 <link rel='stylesheet' id='NovelLite_font-css'  href='//fonts.googleapis.com/css?family=Open+Sans%3A300italic%2C400italic%2C600italic%2C700italic%2C800italic%2C400%2C300%2C600%2C700%2C800&#038;ver=4.9.8' type='text/css' media='all' />
-<link rel='stylesheet' id='NovelLite_bootstrap-css'  href='{{$base_url}}assets/css/bootstrap.css?ver=4.9.8' type='text/css' media='all' />
-<link rel='stylesheet' id='font_awesome-css'  href='{{$base_url}}assets/css/font-awesome.min.css?ver=4.9.8' type='text/css' media='all' />
-<link rel='stylesheet' id='animate-css'  href='{{$base_url}}assets/css/animate.css?ver=4.9.8' type='text/css' media='all' />
-<link rel='stylesheet' id='bxslider-css'  href='{{$base_url}}assets/css/jquery.bxslider.css?ver=4.9.8' type='text/css' media='all' />
-<link rel='stylesheet' id='flexslider-css'  href='{{$base_url}}assets/css/flexslider.css?ver=4.9.8' type='text/css' media='all' />
-<link rel='stylesheet' id='NovelLite_prettyPhoto-css'  href='{{$base_url}}assets/css/prettyPhoto.css?ver=4.9.8' type='text/css' media='all' />
-<link rel='stylesheet' id='NovelLite_style-css'  href='{{$base_url}}assets/css/style.css?ver=4.9.8' type='text/css' media='all' />
-<script type='text/javascript' src='{{$base_url}}assets/js/jquery.js?ver=1.12.4'></script>
-<script type='text/javascript' src='{{$base_url}}assets/css/font-awesome/js/all.js'></script>
-<script type='text/javascript' src='{{$base_url}}assets/js/jquery-migrate.min.js?ver=1.4.1'></script>
+<link rel='stylesheet' id='NovelLite_bootstrap-css'  href='{{$base_url}}/assets/css/bootstrap.css?ver=4.9.8' type='text/css' media='all' />
+<link rel='stylesheet' id='font_awesome-css'  href='{{$base_url}}/assets/css/font-awesome.min.css?ver=4.9.8' type='text/css' media='all' />
+<link rel='stylesheet' id='animate-css'  href='{{$base_url}}/assets/css/animate.css?ver=4.9.8' type='text/css' media='all' />
+<link rel='stylesheet' id='bxslider-css'  href='{{$base_url}}/assets/css/jquery.bxslider.css?ver=4.9.8' type='text/css' media='all' />
+<link rel='stylesheet' id='flexslider-css'  href='{{$base_url}}/assets/css/flexslider.css?ver=4.9.8' type='text/css' media='all' />
+<link rel='stylesheet' id='NovelLite_prettyPhoto-css'  href='{{$base_url}}/assets/css/prettyPhoto.css?ver=4.9.8' type='text/css' media='all' />
+<link rel='stylesheet' id='NovelLite_style-css'  href='{{$base_url}}/assets/css/style.css?ver=4.9.8' type='text/css' media='all' />
+<script type='text/javascript' src='{{$base_url}}/assets/js/jquery.js?ver=1.12.4'></script>
+<script type='text/javascript' src='{{$base_url}}/assets/css/font-awesome/js/all.js'></script>
+<script type='text/javascript' src='{{$base_url}}/assets/js/jquery-migrate.min.js?ver=1.4.1'></script>
 <style type='text/css'>.footer_bg, .woocommerce span.onsale, .woocommerce-page span.onsale, .woocommerce #content input.button, .woocommerce #respond input#submit, .woocommerce a.button, .woocommerce button.button, .woocommerce input.button, .woocommerce-page #content input.button, .woocommerce-page #respond input#submit, .woocommerce-page a.button, .woocommerce-page button.button, .woocommerce-page input.button, .woocommerce #content input.button.alt, .woocommerce #respond input#submit.alt, .woocommerce a.button.alt, .woocommerce button.button.alt, .woocommerce input.button.alt, .woocommerce-page #content input.button.alt, .woocommerce-page #respond input#submit.alt, .woocommerce-page a.button.alt, .woocommerce-page button.button.alt, .woocommerce-page input.button.alt, .woocommerce ul.products li.product a.button, .woocommerce.archive ul.products li.product a.button, .woocommerce-page.archive ul.products li.product a.button, .woocommerce #content input.button:hover, .woocommerce #respond input#submit:hover, .woocommerce a.button:hover, .woocommerce button.button:hover, .woocommerce input.button:hover, .woocommerce-page #content input.button:hover, .woocommerce-page #respond input#submit:hover, .woocommerce-page a.button:hover, .woocommerce-page button.button:hover, .woocommerce-page input.button:hover, .woocommerce #content input.button.alt:hover, .woocommerce #respond input#submit.alt:hover, .woocommerce a.button.alt:hover, .woocommerce button.button.alt:hover, .woocommerce input.button.alt:hover, .woocommerce-page #content input.button.alt:hover, .woocommerce-page #respond input#submit.alt:hover, .woocommerce-page a.button.alt:hover, .woocommerce-page button.button.alt:hover, .woocommerce-page input.button.alt:hover, .woocommerce ul.products li.product a.button:hover, .woocommerce.archive ul.products li.product a.button:hover, .woocommerce-page.archive ul.products li.product a.button:hover .woocommerce-page #respond input#submit, .woocommerce-product-search input[type='submit'], .ui-slider .ui-slider-range{
     background:#fed136;
 } 
@@ -151,20 +151,66 @@ footer{background:#20222b;}.navbar-default{background-color:#fff;}
 .navbar .sf-menu li:hover, .navbar .sf-menu li.sfHover, .navbar li.current_page_item,.navbar .sf-menu ul li,.navbar-default .navbar-nav>.active>a,.navbar-default .navbar-nav>.active>a:hover, .navbar-default .navbar-nav>.active>a:focus{background:#fec503}
 .navbar-default .navbar-toggle, 
 .navbar-default .navbar-toggle:focus{background:#fec503;border-color:#fec503;}.NovelLite_slider .container h1 a{color:#fff;}
-.NovelLite_slider .container p{color:#fff;}.NovelLite_slider .slider_overlay{background-color:rgba(0, 0, 0, 0.1);}#section1 h2.section-heading{color:#333;}
-#section1 h3.section-subheading{color:#777;} #section1 h4.service-heading{color:#777;}
-#section1 p.text-muted{color:#777;}#section1{background:#fff;}#section2 .testimonial-inner .testimonial-header{color:#fff;}.bx-wrapper .bx-caption span{background:#fff; color:#000}#section2{background-image:url({{$base_url}}assets/images/Center-Page.jpeg);}#section2:before{background:rgba(0, 0,0, 0);}#section8 h2.section-heading{color:#333;}
-#section8 h3.section-subheading{color:#777;}#section8{background:#F7F7F7;}#section3 h2.section-heading{color:#333;}
-#section3 h3.section-subheading{color:#777;}#section3{background:#fff;}#section4 h2.section-heading{color:#333;}
+.NovelLite_slider .container p {color: #000;font-weight: 500;font-size: 28px;}.NovelLite_slider .slider_overlay{background-color:rgba(0, 0, 0, 0.1);}#section1 h2.section-heading{color:#333;}
+#section1 h3.section-subheading{color:#777;}
+#section1 h4.service-heading{color:#777;}
+#section1 p.text-muted{color:#777;}
+#section1{background:#fff;}
+.even .testimonial-inner .testimonial-header{color:#fff;}
+.bx-wrapper .bx-caption span{background:#fff; color:#000}
+.even{background-image:url({{$base_url}}/assets/images/Center-Page.jpeg);}
+.even:before{background:rgba(0, 0,0, 0);}
+
+.odd h2.section-heading{color:#333;}
+.odd h3.section-subheading{color:#777;}
+.odd {background:#fff;}
+.odd .testimonial-inner .testimonial-header {color:#333333;}
+
+.review h2.section-heading{color:#333;}
+.review h3.section-subheading{color:#777;}
+.review{background-image: linear-gradient(rgb(241, 245, 247),rgb(226, 240, 245));} /*{background-image:url({{$base_url}}/assets/images/review-background.jpg);}*/
+
+#section4 h2.section-heading{color:#333;}
 #section4 h3.section-subheading{color:#777;}
 #section4 .team-member h4{color:#222;}
 #section4 .team-member p.text-muted{color:#777;}
-#section4 .team-member p{color:#333;}#section4{background:#f7f7f7;}#section5 .section-heading{color:#fff;}
-#section5 h3.section-subheading.contact{color:#fff;}#section5{background-image:url({{$base_url}}assets/images/Contact-Us.jpeg);}#section5:before{background:rgba(0,0,0,0);}#price-package .post-title h1{color:#fff;}
-#price-package .post-title p{color:#fff;}#price-package{background-image:url({{$base_url}}assets/images/pricing.jpg);}#price-package:before{background:rgba(0, 0,0, 0);}</style><link rel="icon" href="{{$base_url}}assets/images/cropped-arrows-box-business-533189-e1533635567575-1-32x32.jpg" sizes="32x32" />
-<link rel="icon" href="{{$base_url}}assets/images/cropped-arrows-box-business-533189-e1533635567575-1-192x192.jpg" sizes="192x192" />
-<link rel="apple-touch-icon-precomposed" href="{{$base_url}}assets/images/cropped-arrows-box-business-533189-e1533635567575-1-180x180.jpg" />
-<meta name="msapplication-TileImage" content="{{$base_url}}assets/images/cropped-arrows-box-business-533189-e1533635567575-1-270x270.jpg" />
+#section4 .team-member p{color:#333;}#section4{background:#f7f7f7;}
+.contactUs .section-heading{color:#fff;}
+.contactUs h3.section-subheading.contact{color:#fff;}
+.contactUs{background-image:url({{$base_url}}/assets/images/Contact-Us.jpeg);}
+.contactUs:before{background:rgba(0,0,0,0);}
+#section8 h2.section-heading{color:#333;}
+#section8 h3.section-subheading{color:#777;}
+#section8{background:#F7F7F7;}
+#price-package .post-title h1{color:#fff;}
+#price-package .post-title p{color:#fff;}#price-package{background-image:url({{$base_url}}/assets/images/pricing.jpg);}
+#price-package:before{background:rgba(0, 0,0, 0);}
+ h1.section1, .section1.a {
+    color: #000 !important;
+}
+mark{
+    background-color: #fed136;
+}
+.home_blog_content .post .post_title {
+    margin: 9px 0 15px 0;
+    min-height: 135px;
+}
+.home_blog_content .post .post_meta {
+    list-style: none;
+    padding-left: 0px;
+    margin-bottom: 5%;
+}
+.bio-member {
+    margin-bottom: 50px;
+    text-align: left;
+    color:#222;
+}
+.bio-member a {color:#222;}
+</style>
+<link rel="icon" href="{{$base_url}}/assets/images/cropped-arrows-box-business-533189-e1533635567575-1-32x32.jpg" sizes="32x32" />
+<link rel="icon" href="{{$base_url}}/assets/images/cropped-arrows-box-business-533189-e1533635567575-1-192x192.jpg" sizes="192x192" />
+<link rel="apple-touch-icon-precomposed" href="{{$base_url}}/assets/images/cropped-arrows-box-business-533189-e1533635567575-1-180x180.jpg" />
+<meta name="msapplication-TileImage" content="{{$base_url}}/assets/images/cropped-arrows-box-business-533189-e1533635567575-1-270x270.jpg" />
 		</head>
 <body id="page-top" class="home page-template page-template-template-frontpage page-template-template-frontpage-php page page-id-171 index">
 <div class="overlayloader">
