--- a/application/views/templates/admin/header.html
+++ b/application/views/templates/admin/header.html
@@ -10,16 +10,16 @@
 
     
     <!-- Bootstrap core CSS -->
-    <link href="{{$base_url}}assets/css/admin/bootstrap.min.css" rel="stylesheet">
+    <link href="/assets/css/admin/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
-    <link href="{{$base_url}}assets/css/admin/dashboard.css" rel="stylesheet">
+    <link href="/assets/css/admin/dashboard.css" rel="stylesheet">
   </head>
 
   <body>
     <nav class="navbar navbar-dark sticky-top bg-dark flex-md-nowrap p-0">
       <a class="navbar-brand col-sm-3 col-md-2 mr-0" href="#">Welcome {{$user[$session_id]['username']}}</a>
-      <input class="form-control form-control-dark w-100" type="text" placeholder="Search" aria-label="Search">
+      
       <ul class="navbar-nav px-3">
         <li class="nav-item text-nowrap">
           <a class="nav-link" href="/login/signout/{{$session_id}}">Sign out</a>
@@ -33,15 +33,21 @@
           <div class="sidebar-sticky">
             <ul class="nav flex-column">
               <li class="nav-item">
-                <a class="nav-link" href="#">
+                <a class="nav-link" href="/admin/reviews">
                   <span data-feather="bar-chart-2"></span>
                   Reviews
                 </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">
+                <a class="nav-link" href="/admin/posts">
                   <span data-feather="layers"></span>
                   Posts
+                </a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="/admin/pages">
+                  <span data-feather="layers"></span>
+                  Pages
                 </a>
               </li>
             </ul>
