--- a/application/views/templates/home.html
+++ b/application/views/templates/home.html
@@ -1,197 +1,21 @@
 {{include file='header.html'}}
-
-	 <input type="hidden" id="txt_slidespeed" value="3000"/>
-<div id="slides_full" class="NovelLite_slider">
-<div class="flexslider novelpro_slider parallax-lite default">
-<ul class="slides slides-container">
-    <li data-center="background-position: 50% 0px"
-    data-top-bottom="background-position: 50% -100px;" style="background:url('{{$base_url}}assets/images/Home-Page.jpeg')">
-        <div class="slider_overlay"></div>
-        <div class="container slider1 container_caption wow fadeInDown" data-wow-duration="2s">
-            <h1><a href="#">Focus on Sales Conversion</a></h1>
-            <div class="clearfix"></div>
-            <p>Leave Data Management to Experts</p>
-            <div class="clearfix"></div>
-        </div>
-    </li> 
-</ul> 
-</div>
-</div>    
-<section id="section1" class="" data-center="" data-top-bottom="">
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-12 text-center">
-                    <h3 class="section-subheading text-muted">Are you wasting too much time in managing your Data?<br>
-                        Are you struggling with your data all over the Place?<br>
-                        Are you having a difficult time handling all your communication?<br>
-                        You need a Customer Relationship Management System<br>if you don’t have one
-                        What is a CRM (Customer Relationship Management) System?<br>
-                        A CRM systems compiles Data from a range of different communication channels,<br> including a company's website, telephone, email, live chat, marketing materials and social media.<br> 
-                        The CRM system maintains &amp; manages the complied data defined by experts <br>
-                        The CRM uses the information to facilitate business learn more<br> about their target audiences and how to best cater to their needs.
-                    </h3>
-              </div>
-        </div>
-    </div>
-</section>
-             <input type="hidden" id="testimonial_slidespeed" value="3000"/>   
-        
+ <input type="hidden" id="txt_slidespeed" value="3000"/>
+{{include file='frontend/homepage.html'}}
+	        
 <!-- *** Testimonial Slider Starts *** -->
- <section id="section2" class="testimonial-wrapper 
- parallax-lite" data-center="background-position: 50% 0px"
-  data-top-bottom="background-position: 50% -100px;">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-12">
-                    <div class="testimonial-inner animated bottom-to-top">
-                                                <h1 class="testimonial-header wow fadeInUp" data-wow-duration="2s">Why do you need an Expert?</h1>
-                                 <h3 class="section-subheading text-muted">
-                                Why do you need an expert? more importantly who is an expert?<br>
-                                Firstly, someone you are comfortable talking too. <br>
-                                Someone who will understand your business needs in a very simple manner.<br>
-                                Someone who will suggest you the right solution suitable to you and your business.<br>
-                                Someone who executes the solution in the right manner and in the appropriate time<br>
-                                Someone who takes ownership of the solution<br>
-                                Someone who is accountable and available even after execution of solution.<br>
-                                </h3>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-    
+{{foreach $pages as $index => $row}}
+{{include file="frontend/pages.html"}}
+{{/foreach}}
               
-<!-- blog Section -->
-<section id="section3" class="" data-center=""
-  data-top-bottom="">
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-12 text-center">
-                                <h2 class="section-heading">Latest Post</h2>
-                                                <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
-                            </div>
-        </div>
-        <div class="row">
-            <div class="col-lg-12">
-                <div class="home_blog_content gallery wow fadeInLeft" data-wow-duration="2s">
-                                        <!--Start post-->
-                    <div class="post animated" style="-webkit-animation-delay: 0.2s; -webkit-animation-delay: 0.2s; -moz-animation-delay: 0.2s; -o-animation-delay: 0.2s; -ms-animation-delay: 0.2s;">
-                        <div class="post_inner">
-                            <div class="post_thumbnil">
-                                                            </div>
-                            
-                            <div class="post_content">
-                                <h1 class="post_title"><a href="http://www.anjali-maya.com/2018/07/27/42/" rel="bookmark" title="Permanent Link to "></a> </h1>
-                                <ul class="post_meta">
-                                    <li class="posted_by"><span>by </span><a href="http://www.anjali-maya.com/author/maya/" title="Posts by Maya" rel="author">Maya</a></li>
-                                    <li class="posted_on"><span></span>Jul, 27, 2018</li>
-                                </ul>  
-                            </div>
-                            <div class="post_content_bottom">
-                                <span class="post_comment"><i class="fa fa-comments"></i><a href="http://www.anjali-maya.com/2018/07/27/42/#respond">No Comments</a></span>
-                                <span class="read_more"><a class="read_more" href="http://www.anjali-maya.com/2018/07/27/42/">Read More</a><i class="fa fa-share-square-o"></i></span>
-                            </div>
-                        </div>
-                    </div>
-                                        <!--Start post-->
-                    <div class="post animated" style="-webkit-animation-delay: 0.4s; -webkit-animation-delay: 0.4s; -moz-animation-delay: 0.4s; -o-animation-delay: 0.4s; -ms-animation-delay: 0.4s;">
-                        <div class="post_inner">
-                            <div class="post_thumbnil">
-                                                            </div>
-                            
-                            <div class="post_content">
-                                <h1 class="post_title"><a href="http://www.anjali-maya.com/2018/05/30/hello-world/" rel="bookmark" title="Permanent Link to Hello world!">Hello world!</a> </h1>
-                                <ul class="post_meta">
-                                    <li class="posted_by"><span>by </span><a href="http://www.anjali-maya.com/author/maya/" title="Posts by Maya" rel="author">Maya</a></li>
-                                    <li class="posted_on"><span></span>May, 30, 2018</li>
-                                </ul>
-                                Welcome to WordPress. This is your first post. Edit or delete it, then start writing!
-                            </div>
-                            <div class="post_content_bottom">
-                                <span class="post_comment"><i class="fa fa-comments"></i><a href="http://www.anjali-maya.com/2018/05/30/hello-world/#comments">One Comments</a></span>
-                                <span class="read_more"><a class="read_more" href="http://www.anjali-maya.com/2018/05/30/hello-world/">Read More</a><i class="fa fa-share-square-o"></i></span>
-                            </div>
-                        </div>
-                    </div>
-                                    </div>
-            </div>
-        </div>
-    </div>
-</section>
-    
-<!-- Team Section -->
-<section id="section4" class="bg-light-gray " data-center=""
-  data-top-bottom="">
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-12 text-center">
-                                <h2 class="section-heading"></h2>
-                                                <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
-                                
-            </div>
-        </div>
-        <div class="row wow fadeInRight" data-wow-duration="2s">
-            <div class="col-sm-4 th-1">
-                <div class="team-member">
-                                        <a href="#"><img src="{{$base_url}}assets/images/Team-Placeholder.jpg" class="img-responsive img-circle" alt=""></a>
-                                                            <a href="#"><h4>Kay Garland</h4></a>
-                                                            <p class="text-muted">Lead Designer</p>
-                                                        </div>
-            </div>
-            <div class="col-sm-4 th-2">
-                <div class="team-member">
-                                        <img src="{{$base_url}}assets/images/Team-Placeholder.jpg" class="img-responsive img-circle" alt="">
-                                                            <a href="#"><h4>Larry Parker</h4></a>
-                                                            <p class="text-muted">Lead Marketer</p>
-                                                        </div>
-            </div>
-            <div class="col-sm-4 th-3">
-                <div class="team-member">
-                    <img src="{{$base_url}}assets/images/Team-Placeholder.jpg" class="img-responsive img-circle" alt="">
-                    <a href="#"><h4>Diana Pertersen</h4></a>
-                    <p class="text-muted">Lead Developer</p>
-                </div>
-            </div>
-        </div>
-    </div>
-</section>
-             
-<section id="section5" class="contact_section parallax-lite" id="section2" data-center="background-position: 50% 0px" data-top-bottom="background-position: 50% -100px;">
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-12 text-center">
-                <h2 class="section-heading">Contact Me</h2>
-                <!-- <h3 class="section-subheading text-muted contact"></h3> -->
-            </div>
-        </div>
-        <div class="row">
-            <div class="cnt-div  wow fadeInRight" data-wow-delay="0s">
-                <div class="wpforms-container wpforms-container-full" id="wpforms-110">
-                    <form id="" class="wpforms-validate wpforms-form" data-formid="110" method="post" enctype="multipart/form-data" action="/">
-                        <div class="wpforms-field-container">
-                            <div id="form_name-container" class="wpforms-field wpforms-field-text" data-field-id="3">
-                                <label class="wpforms-field-label" for="form_name">Name <span class="wpforms-required-label">*</span></label>
-                                <input type="text" id="form_name" class="wpforms-field-medium wpforms-field-required" name="name" required>
-                            </div>
-                            <div id="email-container" class="wpforms-field wpforms-field-email" data-field-id="1">
-                                <label class="wpforms-field-label" for="email">Email <span class="wpforms-required-label">*</span></label>
-                                <input type="email" id="email" class="wpforms-field-medium wpforms-field-required" name="email" required>
-                            </div>
-                            <div id="form-comment-container" class="wpforms-field wpforms-field-textarea" data-field-id="2">
-                                <label class="wpforms-field-label" for="form-comment">Comment or Message <span class="wpforms-required-label">*</span></label>
-                                <textarea id="form-comment" class="wpforms-field-medium wpforms-field-required" name="wpforms[fields][2]" required></textarea>
-                            </div>
-                        </div>
-                        <div class="wpforms-submit-container" ><input type="hidden" name="wpforms[id]" value="110"><input type="hidden" name="wpforms[author]" value="1">
-                            <input type="hidden" name="wpforms[post_id]" value="1">
-                            <button type="submit" name="wpforms[submit]" class="wpforms-submit " id="wpforms-submit-110" value="wpforms-submit" aria-live="assertive" >Submit</button>
-                        </div>
-                    </form>
-                </div>  <!-- .wpforms-container -->                
-            </div>
-        </div>
-    </div>
-</section>
+<!-- review Section -->
+{{include file="frontend/reviews.html"}}
+<!-- Demo Section -->
+{{include file="frontend/bio.html"}}
+
+{{include file="frontend/demo.html"}}
+
+{{include file="frontend/contactme.html"}}
+
     <div id ="slspeed" sliderspeed=""></div>
 <input type="hidden" id="back-to-top" value="0"/> 
 <div class="outer-footer">
