review module built

--- a/application/views/templates/frontend/reviews.html
+++ b/application/views/templates/frontend/reviews.html
@@ -1,48 +1,32 @@
-<section id="section3" class="review" data-center=""
-  data-top-bottom="">
+<section id="section3" class="review" data-center=""  data-top-bottom="">
     <div class="container">
         <div class="row">
             <div class="col-lg-12 text-center">
-                                <h2 class="section-heading">Reviews</h2>
-                                                <h3 class="section-subheading text-muted"></h3>
-                            </div>
+                <h2 class="section-heading">Reviews</h2>
+                    <h3 class="section-subheading text-muted"></h3>
+            </div>
         </div>
         <div class="row">
             <div class="col-lg-12">
                 <div class="home_blog_content gallery wow fadeInLeft" data-wow-duration="2s">
-                                        <!--Start post-->
-                    <div class="post animated" style="-webkit-animation-delay: 0.2s; -webkit-animation-delay: 0.2s; -moz-animation-delay: 0.2s; -o-animation-delay: 0.2s; -ms-animation-delay: 0.2s;">
-                        <div class="post_inner">
-                            <div class="post_thumbnil">
-                                                            </div>
-                            
-                            <div class="post_content">
-                                <h1 class="post_title"><a href="http://www.anjali-maya.com/2018/07/27/42/" rel="bookmark" title="Permanent Link to "></a> </h1>
-                                <ul class="post_meta">
-                                    <li class="posted_by"><span>by </span><a href="http://www.anjali-maya.com/author/maya/" title="Posts by Maya" rel="author">Maya</a></li>
-                                    <li class="posted_on"><span></span>Jul, 27, 2018</li>
-                                </ul>  
-                            </div>
-                            
-                        </div>
-                    </div>
+                {{foreach $reviews as $index=> $row}}
                                         <!--Start post-->
                     <div class="post animated" style="-webkit-animation-delay: 0.4s; -webkit-animation-delay: 0.4s; -moz-animation-delay: 0.4s; -o-animation-delay: 0.4s; -ms-animation-delay: 0.4s;">
                         <div class="post_inner">
                             <div class="post_thumbnil">
-                                                            </div>
-                            
+                            </div>
                             <div class="post_content">
-                                <h1 class="post_title"><a href="http://www.anjali-maya.com/2018/05/30/hello-world/" rel="bookmark" title="Permanent Link to Hello world!">Hello world!</a> </h1>
+                                <h1 class="post_title"><a href="#" rel="bookmark" title="">{{$row['content']}}</a> </h1>
+                                <p class="post_comment">fwerjbfuier</p>
                                 <ul class="post_meta">
-                                    <li class="posted_by"><span>by </span><a href="http://www.anjali-maya.com/author/maya/" title="Posts by Maya" rel="author">Maya</a></li>
-                                    <li class="posted_on"><span></span>May, 30, 2018</li>
+                                    <li class="posted_by"><span>by </span><a href="http://www.anjali-maya.com/author/maya/" title="Posts by Maya" rel="author">{{$row['author']}}</a></li>
+                                    <li class="posted_on"><span></span>{{$row['date']}}</li>
                                 </ul>
-                               
-                           
+                            </div>
                         </div>
                     </div>
-                                    </div>
+                {{/foreach}}
+                </div>
             </div>
         </div>
     </div>
