--- a/application/views/templates/header.html
+++ b/application/views/templates/header.html
@@ -191,9 +191,10 @@ footer{background:#20222b;}.navbar-default{background-color:#fff;}
 mark{
     background-color: #fed136;
 }
-.home_blog_content .post .post_title {
-    margin: 9px 0 15px 0;
+.home_blog_content .post .post_comment {
+    margin: 16px 0 16px 16px;
     min-height: 135px;
+    text-align: justify;
 }
 .home_blog_content .post .post_meta {
     list-style: none;
