--- a/application/views/templates/admin/header.html
+++ b/application/views/templates/admin/header.html
@@ -50,6 +50,19 @@
                   Pages
                 </a>
               </li>
+             
+              <li class="nav-item">
+                <a class="nav-link" href="/admin/demo">
+                  <span data-feather="layers"></span>
+                  Demo
+                </a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="/admin/biography">
+                  <span data-feather="layers"></span>
+                  Biography
+                </a>
+              </li>
             </ul>
           </div>
         </nav>
