--- a/application/views/templates/frontend/demo.html
+++ b/application/views/templates/frontend/demo.html
@@ -1,36 +1,32 @@
-<section id="section4" class="bg-light-gray " data-center=""
-  data-top-bottom="">
+<section class=" demo bg-light-gray " data-center=""  data-top-bottom="">
     <div class="container">
         <div class="row">
             <div class="col-lg-12 text-center">
-                                <h2 class="section-heading"></h2>
-                                                <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
-                                
+                 <h2 class="section-heading">Demo</h2>
             </div>
-        </div>
-        <div class="row wow fadeInRight" data-wow-duration="2s">
-            <div class="col-sm-4 th-1">
+        </div> 
+        <div class="wow fadeInRight" data-wow-duration="2s">
+          {{*  <!--Sample code
                 <div class="team-member">
-                                        <a href="#"><img src="{{$base_url}}/assets/images/Team-Placeholder.jpg" class="img-responsive img-circle" alt=""></a>
-                                                            <a href="#"><h4>Kay Garland</h4></a>
-                                                            <p class="text-muted">Lead Designer</p>
-                                                        </div>
-            </div>
-            <div class="col-sm-4 th-2">
-                <div class="team-member">
-                                        <img src="{{$base_url}}/assets/images/Team-Placeholder.jpg" class="img-responsive img-circle" alt="">
-                                                            <a href="#"><h4>Larry Parker</h4></a>
-                                                            <p class="text-muted">Lead Marketer</p>
-                                                        </div>
-            </div>
-            <div class="col-sm-4 th-3">
-                <div class="team-member">
-                    <img src="{{$base_url}}/assets/images/Team-Placeholder.jpg" class="img-responsive img-circle" alt="">
-                    <a href="#"><h4>Diana Pertersen</h4></a>
-                    <p class="text-muted">Lead Developer</p>
+                        <a href="#"><img src="{{$base_url}}/assets/images/Team-Placeholder.jpg" class="img-responsive img-circle" alt=""></a>
+                        <a href="#"><h4>Kay Garland</h4></a>
+                        <p class="text-muted">Lead Designer</p>
+                    </div>
                 </div>
+                 -->
+                 *}}
+        {{foreach $demo as $subArr}}
+            <div class="row" >
+                {{foreach $subArr as $row}}
+                    <div class="col-sm-4 th-1">
+                        <div class="team-member img-responsive">
+                                <iframe  src="{{$row['embeded']}}" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                        </div>
+                    </div>
+                {{/foreach}}
             </div>
-        </div>
-    </div>
+        {{/foreach}} 
+    </div> 
+</div>
 </section>
              
