--- a/application/views/templates/frontend/pages.html
+++ b/application/views/templates/frontend/pages.html
@@ -4,7 +4,9 @@
             <div class="col-md-12">
                 <div class="testimonial-inner animated bottom-to-top">
                     <h1 class="testimonial-header wow fadeInUp" data-wow-duration="2s">{{$row['heading']}}</h1>
-                    <h3 style="margin-left: 22%"class="section-subheading text-muted">{{$row['content']}}</h3>
+                    <p style="margin-left: 22%" class="section-subheading text-muted" >
+                        {{$row['content']}} 
+                    </p>
                 </div>
             </div>
         </div>
