--- a/application/views/templates/frontend/reviews.html
+++ b/application/views/templates/frontend/reviews.html
@@ -5,21 +5,25 @@
                 <h2 class="section-heading">Reviews</h2>
                     <h3 class="section-subheading text-muted"></h3>
             </div>
-        </div>
-        <div class="row">
-            <div class="col-lg-12">
+        </div> 
+
+        {{foreach $reviews as $subArr}}
+        <div class="row"> 
+         
+            <div class="col-lg-12">   
                 <div class="home_blog_content gallery wow fadeInLeft" data-wow-duration="2s">
-                {{foreach $reviews as $index=> $row}}
-                                        <!--Start post-->
-                    <div class="post animated" style="-webkit-animation-delay: 0.4s; -webkit-animation-delay: 0.4s; -moz-animation-delay: 0.4s; -o-animation-delay: 0.4s; -ms-animation-delay: 0.4s;">
+               
+                    {{foreach $subArr as $row}}
+                    <!--Start post-->
+                    <div class="post animated" style="--webkit-animation-delay: 0.4s; --webkit-animation-delay: 0.4s; --moz-animation-delay: 0.4s; --o-animation-delay: 0.4s; --ms-animation-delay: 0.4s;">
                         <div class="post_inner">
                             <div class="post_thumbnil">
                             </div>
                             <div class="post_content">
                                 <h1 class="post_title"><a href="#" rel="bookmark" title="">{{$row['content']}}</a> </h1>
-                                <p class="post_comment">fwerjbfuier</p>
+                                <p class="post_comment">{{$row['comment']}}</p>
                                 <ul class="post_meta">
-                                    <li class="posted_by"><span>by </span><a href="http://www.anjali-maya.com/author/maya/" title="Posts by Maya" rel="author">{{$row['author']}}</a></li>
+                                    <li class="posted_by"><span>by </span><a href="javascript:void(0);" title="Posts by {{$row['author']}}" rel="author">{{$row['author']}}</a></li>
                                     <li class="posted_on"><span></span>{{$row['date']}}</li>
                                 </ul>
                             </div>
@@ -29,5 +33,6 @@
                 </div>
             </div>
         </div>
+         {{/foreach}}
     </div>
 </section>
