--- a/application/views/templates/header.html
+++ b/application/views/templates/header.html
@@ -211,6 +211,10 @@ mark{
 legend {border:0;border-bottom:none;}
 .well{background-color: transparent;border: transparent;-webkit-box-shadow: none;}
 fieldset {background: transparent;}
+mark, .mark {
+    padding: 0;
+    background-color: #fed136;
+}
 </style>
 <link rel="icon" href="{{$base_url}}/assets/images/cropped-arrows-box-business-533189-e1533635567575-1-32x32.jpg" sizes="32x32" />
 <link rel="icon" href="{{$base_url}}/assets/images/cropped-arrows-box-business-533189-e1533635567575-1-192x192.jpg" sizes="192x192" />
