--- a/application/views/templates/admin/footer.html
+++ b/application/views/templates/admin/footer.html
@@ -7,43 +7,19 @@
     <script>window.jQuery || document.write('<script src="/assets/js/admin/jquery-slim.min.js"><\/script>')</script>
     <script src="/assets/js/admin/popper.min.js"></script>
     <script src="/assets/js/admin/bootstrap.min.js"></script>
-
+    <script src="/assets/uploaders/js/script.js"></script>
     <!-- Icons -->
     <script src="https://unpkg.com/feather-icons/dist/feather.min.js"></script>
+    <script src="https://cdn.ckeditor.com/4.13.1/standard-all/ckeditor.js"></script>
     <script>
       feather.replace()
     </script>
 
-    <!-- Graphs -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.1/Chart.min.js"></script>
+
+   
     <script>
-      var ctx = document.getElementById("myChart");
-      var myChart = new Chart(ctx, {
-        type: 'line',
-        data: {
-          labels: ["Sunday", "Monday", "Tuesday", "Wednesday", "Thursday", "Friday", "Saturday"],
-          datasets: [{
-            data: [15339, 21345, 18483, 24003, 23489, 24092, 12034],
-            lineTension: 0,
-            backgroundColor: 'transparent',
-            borderColor: '#007bff',
-            borderWidth: 4,
-            pointBackgroundColor: '#007bff'
-          }]
-        },
-        options: {
-          scales: {
-            yAxes: [{
-              ticks: {
-                beginAtZero: false
-              }
-            }]
-          },
-          legend: {
-            display: false,
-          }
-        }
-      });
+    CKEDITOR.disableAutoInline = true;
+    CKEDITOR.replace('content');
     </script>
   </body>
 </html>
