--- a/application/views/templates/admin/header.html
+++ b/application/views/templates/admin/header.html
@@ -14,6 +14,7 @@
 
     <!-- Custom styles for this template -->
     <link href="/assets/css/admin/dashboard.css" rel="stylesheet">
+    <link href="/assets/uploaders/css/main.css" rel="stylesheet" type="text/css" />
   </head>
 
   <body>
