--- a/application/views/templates/admin/pages.html
+++ b/application/views/templates/admin/pages.html
@@ -22,7 +22,7 @@
                         </div>
                         <div class="form-group">
                           <label for="pwd">Content:</label>
-                          <textarea class="form-control" name="content">{{$page['content']}}</textarea>
+                          <textarea class="form-control editor" name="content">{{$page['content']}}</textarea>
                         </div>
                         <input type="hidden" name="pageID" value="{{$page['hash_id']}}">
                         <button type="submit" class="btn btn-default">Submit</button>
@@ -46,7 +46,7 @@
                       <tr>
                         <td>{{$index+1}}</td>
                         <td>{{$rows['heading']}}</td>
-                        <td>{{$rows['content']}}</td>
+                        <td>{{$rows['content']|strip_tags}}</td>
                         <td><a href="/admin/pages/edit/{{$rows['hash_id']}}" >Edit</a> | <a href="/admin/pages/delete/{{$rows['hash_id']}}" >DELETE</a></td>
                     </tr>
                      {{/foreach}}
