--- a/application/views/templates/admin/demo.html
+++ b/application/views/templates/admin/demo.html
@@ -16,6 +16,10 @@
                           <label for="text">Order No:</label>
                           <input type="text" class="form-control" name="order_no" value="{{$demo['order_no']}}">
                         </div>
+                         <div class="form-group">
+                          <label for="text">Title:</label>
+                          <input type="text" class="form-control" name="title" value="{{$demo['title']}}">
+                        </div>
                         <div class="form-group">
                           <label for="pwd">Embed Code:</label>
                           <textarea class="form-control" name="embededContent">{{$demo['embeded']}}</textarea>
