--- a/application/views/templates/header.html
+++ b/application/views/templates/header.html
@@ -153,7 +153,7 @@ footer{background:#20222b;}.navbar-default{background-color:#fff;}
 
 .even .testimonial-inner .testimonial-header{color:#fff;}
 .bx-wrapper .bx-caption span{background:#fff; color:#000}
-.even{background-image:url({{$base_url}}/assets/images/Center-Page.jpeg);}
+.even{background-image:url({{$base_url}}/assets/images/page3.jpg);}
 .even:before{background:rgba(0, 0,0, 0);}
 
 .odd h2.section-heading{color:#333;}
@@ -165,8 +165,8 @@ footer{background:#20222b;}.navbar-default{background-color:#fff;}
 
 .review h2.section-heading{color:#333;}
 .review h3.section-subheading{color:#777;}
-.review{background-image: linear-gradient(rgb(241, 245, 247),rgb(226, 240, 245));} /*{background-image:url({{$base_url}}/assets/images/review-background.jpg);}*/
-.demo{background-image: linear-gradient(rgb(241, 245, 247),rgb(226, 240, 245));} /*{background-image:url({{$base_url}}/assets/images/review-background.jpg);}*/
+.review{background:#fff;} /*{background-image:url({{$base_url}}/assets/images/review-background.jpg);}*/
+.demo{background: #f3f1f1;} /*{background-image:url({{$base_url}}/assets/images/review-background.jpg);}*/
 .bio{background-image: linear-gradient(rgb(226, 240, 245),rgb(241, 245, 247));} /*{background-image:url({{$base_url}}/assets/images/review-background.jpg);}*/
 
 .section4 h2.section-heading{color:#333;}
@@ -187,9 +187,15 @@ footer{background:#20222b;}.navbar-default{background-color:#fff;}
 #price-package .post-title p{color:#fff;}#price-package{background-image:url({{$base_url}}/assets/images/pricing.jpg);}
 #price-package:before{background:rgba(0, 0,0, 0);}
  h1.section1, .section1.a {
-    color: #000 !important;
+    color:#5a5454 !important;
 }
+
 mark{
+    background-color: #fed136;
+    color:#5a5454 !important;
+}
+.section1 mark{ 
+    color:#5a5454 !important;
     background-color: #fed136;
 }
 .home_blog_content .post .post_comment {
@@ -214,6 +220,54 @@ fieldset {background: transparent;}
 mark, .mark {
     padding: 0;
     background-color: #fed136;
+}
+h1, .h1, h2, .h2, h3, .h3 {
+    color:#222;
+    margin-top: -2px;
+    margin-bottom: 3px;
+}
+.pageText table{border: 0px !important;}
+
+.pageText h3{
+    margin-top: 4px;
+    font-size: 20px;
+    color:#000;
+    padding: 4px;
+}
+
+.pageText p{
+    font-size: 17px;
+    color:#5a5454 ;
+    margin: 5px 28px 2px;
+    line-height: 24px;
+}
+#section2 .pageText p{
+    font-size: 17px;
+    color:#fff ;
+    margin: 5px 28px 2px;
+    line-height: 24px;
+}
+#section2.bio .pageText p{
+    font-size: 17px;
+    ;color:#5a5454 ;
+    margin: 5px 28px 2px;
+    line-height: 24px;
+}
+.contact_section {
+    background-color: #222;
+    background: url({{$base_url}}/assets/images/Page7.jpg);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+.biography h2{font-size: 36px !important;  margin-bottom: 41px !important;}
+.form-horizontal .form-group {
+    margin-right: 134px;
+    margin-left: -15px;
+}
+.demo_review h2 {
+    font-size: 42px !important;
+    margin-bottom: 41px !important;
 }
 </style>
 <link rel="icon" href="{{$base_url}}/assets/images/cropped-arrows-box-business-533189-e1533635567575-1-32x32.jpg" sizes="32x32" />
