--- a/application/views/templates/frontend/contactme.html
+++ b/application/views/templates/frontend/contactme.html
@@ -2,7 +2,7 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-12 text-center">
-                <h2 class="section-heading">Contact Me</h2>
+                <h2 class="section-heading"><mark>Contact Me</mark></h2>
             </div>
         </div>
         <div class="row">
@@ -55,19 +55,7 @@
                 </div>
             </div>
         </div>
-                    
-        <div class="row">
-            <div class="form-group"> 
-                <span class="col-md-1 col-md-offset-2 text-center">&nbsp;</span>
-                <div class="col-md-8 text-center">
-                    <a href="" target="_blank">
-                        <h2 class="section-heading">
-                            <mark>Leave Data Management to Experts</mark>
-                        </h2>
-                    </a>
-                </div>
-            </div>
-        </div>
+             
     </div>
 </section>
 <input type="hidden" id="testimonial_slidespeed" value="3000"/>  
