--- a/application/views/templates/frontend/demo.html
+++ b/application/views/templates/frontend/demo.html
@@ -1,31 +1,35 @@
 <section class=" demo bg-light-gray " data-center=""  data-top-bottom="">
     <div class="container">
         <div class="row">
-            <div class="col-lg-12 text-center">
-                 <h2 class="section-heading">Demo</h2>
+            <div class="col-lg-12 text-center demo_review">
+                <h2 class="section-heading"><mark>Demo</mark></h2>
+                    <h3 class="section-subheading text-muted"></h3>
             </div>
         </div> 
         <div class="wow fadeInRight" data-wow-duration="2s">
-          {{*  <!--Sample code
-                <div class="team-member">
-                        <a href="#"><img src="{{$base_url}}/assets/images/Team-Placeholder.jpg" class="img-responsive img-circle" alt=""></a>
-                        <a href="#"><h4>Kay Garland</h4></a>
-                        <p class="text-muted">Lead Designer</p>
-                    </div>
-                </div>
-                 -->
-                 *}}
+        
         {{foreach $demo as $subArr}}
-            <div class="row" >
-                {{foreach $subArr as $row}}
-                    <div class="col-sm-4 th-1">
-                        <div class="team-member img-responsive">
-                                <iframe  src="{{$row['embeded']}}" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <div class="row"> 
+         
+            <div class="col-lg-12">   
+                <div class="home_blog_content gallery wow fadeInLeft" data-wow-duration="2s">
+               
+                    {{foreach $subArr as $row}}
+                    <!--Start post-->
+                    <div class="post animated" style="--webkit-animation-delay: 0.4s; --webkit-animation-delay: 0.4s; --moz-animation-delay: 0.4s; --o-animation-delay: 0.4s; --ms-animation-delay: 0.4s;">
+                        <div class="post_inner">
+                            <div class="post_thumbnil"><iframe  src="{{$row['embeded']}}" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                            </div>
+                            <div class="post_content">
+                                <h4 class="post_title">{{$row['title']}}</h4>
+                            </div>
                         </div>
                     </div>
                 {{/foreach}}
+                </div>
             </div>
-        {{/foreach}} 
+        </div>
+         {{/foreach}}
     </div> 
 </div>
 </section>
