--- a/application/views/templates/frontend/reviews.html
+++ b/application/views/templates/frontend/reviews.html
@@ -1,8 +1,8 @@
 <section id="section3" class="review" data-center=""  data-top-bottom="">
     <div class="container">
         <div class="row">
-            <div class="col-lg-12 text-center">
-                <h2 class="section-heading">Reviews</h2>
+            <div class="col-lg-12 text-center demo_review">
+                <h2 class="section-heading"><mark>Reviews</mark></h2>
                     <h3 class="section-subheading text-muted"></h3>
             </div>
         </div> 
